<resources>
    <string name="app_name">TipTime</string>
    <string name="total_cost_of_service">Total Cost of Service</string>
    <string name="calculate">Calculate Tip</string>
    <string name="roundUp">Round Up</string>
    <string name="roundDown">Round Down</string>
    <string name="rounTip"><![CDATA[<- Round Tip ->]]></string>
    <string name="tip">Tip %</string>
    <string name="payment">Payment</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="visapayment">visaPayment</string>
    <string name="masterpayment">masterPayment</string>
    <string name="bikashpayment">bikashPayment</string>
    <string name="total_amount_to_pay">Total Amount to Pay</string>
    <string name="account_number">Account Number</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="thankYou">Thank You Come Again!</string>
    <string name="amountWarning">Enter Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="color">Color/</string>
    <string name="breakfast_items">Breakfast Items</string>
    <string name="lunch_menu">Lunch Menu</string>
    <string name="dinner_menu">Dinner Menu</string>
    <string name="breakfast_1">Breakfast 1</string>
    <string name="_80">80</string>
    <string name="breakfast_2">Breakfast 2</string>
    <string name="_100">100</string>
    <string name="break_fast">Break Fast Item</string>
    <string name="breakfast_3">Breakfast 3</string>
    <string name="_180">180</string>
    <string name="meat_and_rice">Meat and Rice</string>
    <string name="_300">300</string>
    <string name="kacchi_biriyani">Kacchi Biriyani</string>
    <string name="_350">350</string>
    <string name="chicken_biriyani">Chicken Biriyani</string>
    <string name="_250">250</string>
    <string name="set_menu_1">Set Menu 1</string>
    <string name="_280">280</string>
    <string name="set_menu_2">Set Menu 2</string>
    <string name="_320_taka">320</string>
    <string name="set_menu_3">Set Menu 3</string>
    <string name="noTipAmount">Tip Amount: ৳0.0</string>
    <string name="continueText">Continue</string>
    <string name="loading">Loading Payment..</string>
    <string name="backHome">Back Home</string>
</resources>