<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MenuActivity"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/breakfastMenutext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/breakfast_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lunchMenutext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="407dp"
        android:layout_height="170dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfastMenutext">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/breakfast1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="DuplicateSpeakableTextCheck">

                <ImageView
                    android:id="@+id/breakfastimg1"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/breakfast1"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/breakfastInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/breakfast_1" />

                <TextView
                    android:id="@+id/breakfastPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_80" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/breakfast2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:padding="10dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:id="@+id/breakfastimg2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/breakfast2" />
                <TextView
                    android:id="@+id/breakfastInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_2"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/breakfastPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/breakfast3"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true">
                <ImageView
                    android:id="@+id/breakfastimg3"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/breakfast3"
                    android:contentDescription="@string/break_fast" />
                <TextView
                    android:id="@+id/breakfastInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_3"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/breakfastPrice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_180"
                    android:layout_gravity="center" />

            </LinearLayout>




        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/scrollView4"
        android:layout_width="409dp"
        android:layout_height="189dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lunchMenutext">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/lunch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true">
                <ImageView
                    android:id="@+id/lunchimg1"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/lunch1" />
                <TextView
                    android:id="@+id/lunchinfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat_and_rice"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/lunchPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_300"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lunch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:padding="10dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:id="@+id/lunchimg2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/lunch2" />
                <TextView
                    android:id="@+id/lunchInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kacchi_biriyani"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/lunchPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_350"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lunch3"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true">
                <ImageView
                    android:id="@+id/lunchimg3"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/lunch3" />
                <TextView
                    android:id="@+id/lunchInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken_biriyani"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/lunchPrice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_250"
                    android:layout_gravity="center" />

            </LinearLayout>




        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/scrollView5"
        android:layout_width="410dp"
        android:layout_height="188dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/dinnerimg1"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/dinner1" />

                <TextView
                    android:id="@+id/dinnerinfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_menu_1" />

                <TextView
                    android:id="@+id/dinnerPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_280" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/dinnerimg2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/dinner2" />

                <TextView
                    android:id="@+id/dinnerInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_menu_2" />

                <TextView
                    android:id="@+id/dinnerPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_320_taka" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/dinnerimg3"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/visapayment"
                    app:srcCompat="@drawable/lunch3" />

                <TextView
                    android:id="@+id/dinnerInfo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_menu_3" />

                <TextView
                    android:id="@+id/dinnerPrice3"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:text="@string/_250" />

            </LinearLayout>


        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/paybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/continueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <TextView
        android:id="@+id/numberPerson"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/personDown"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <TextView
        android:id="@+id/menuTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/personDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/roundDown"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/personUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/roundUp"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/numberPerson"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5"
        app:srcCompat="@android:drawable/arrow_up_float" />


</androidx.constraintlayout.widget.ConstraintLayout>