<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/bell"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        android:text="@string/app_name"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="9dp"
        android:autofillHints=""
        android:textSize="40sp"
        android:hint="@string/total_cost_of_service"
        android:inputType="none"
        android:minHeight="48dp"
        android:paddingHorizontal="5dp"
        android:textColorHint="#616161"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/percentageSeekBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/percentValue"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount" />

    <TextView
        android:id="@+id/percentValue"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:fontFamily="@font/bell"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentageSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tip"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/percentageSeekBar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/roundUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/roundUp"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/arrow_up_float" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:gravity="center"
        android:text="@string/rounTip"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/roundUp"
        app:layout_constraintEnd_toStartOf="@+id/roundDown"
        app:layout_constraintTop_toBottomOf="@+id/percentageSeekBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/roundDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:contentDescription="@string/roundDown"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/percentValue"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/calculatedAmountText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:padding="15dp"
        android:text="@string/payment"
        android:textSize="40sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatedAmountText"
        app:layout_constraintVertical_bias="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>
